<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/headerNav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerNav"
        android:layout_marginTop="20dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtMediaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="Media Name"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imPoster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/txtMediaName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/poster_placeholder" />

        <RelativeLayout
            android:id="@+id/boxDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMediaName"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:layout_toRightOf="@id/imPoster"
            android:padding="4dp">

            <TextView
                android:id="@+id/lblMediaDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="2dp"
                android:text="@string/lblMediaDuration"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblMediaAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblMediaDuration"
                android:layout_alignParentLeft="true"
                android:layout_margin="2dp"
                android:text="@string/lblMediaAuthor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblMediaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblMediaAuthor"
                android:layout_alignParentLeft="true"
                android:layout_margin="2dp"
                android:text="@string/lblMediaType"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblMediaYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblMediaType"
                android:layout_alignParentLeft="true"
                android:layout_margin="2dp"
                android:text="@string/lblMediaYear"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMediaDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblMediaDuration"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/lblMediaDuration"
                android:text="@string/txtInfoDuration" />

            <TextView
                android:id="@+id/txtMediaAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMediaDuration"
                android:layout_alignBaseline="@id/lblMediaAuthor"
                android:layout_margin="2dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/lblMediaAuthor"
                android:text="@string/txtInfoAuthor" />

            <TextView
                android:id="@+id/txtMediaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMediaAuthor"
                android:layout_alignBaseline="@id/lblMediaType"
                android:layout_margin="2dp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/lblMediaType"
                android:text="@string/txtInfoMtype" />

            <TextView
                android:id="@+id/txtMediaYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMediaType"
                android:layout_alignBaseline="@id/lblMediaYear"
                android:layout_margin="2dp"
                android:layout_toRightOf="@id/lblMediaYear"
                android:text="@string/txtInfoYear"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnRate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imPoster"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorYellow"
            android:text="@string/lblRate"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnReports"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imPoster"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorYellow"
            android:text="@string/lblReports"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_nav_cc_sampling_plus"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/colorWhite" />
</RelativeLayout>
