<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <android.support.v7.widget.Toolbar
        android:id="@+id/headerNav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/mediaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerNav"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txtMediaTitle"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/mediaTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/txtMediaTime"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_rating_play"
        android:text="@string/lblPlay" />

    <ImageButton
        android:id="@+id/btnRewind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerDisplay"
        android:layout_toLeftOf="@+id/btnPlay"
        android:layout_alignBaseline="@+id/btnPlay"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_rating_backward" />

    <ImageButton
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerDisplay"
        android:layout_toRightOf="@+id/btnPlay"
        android:layout_alignBaseline="@+id/btnPlay"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_rating_forward" />

    <ImageButton
        android:id="@+id/btnGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPlay"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_rating_up"
        android:text="@string/lblGood" />

    <ImageButton
        android:id="@+id/btnBad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPlay"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_rating_down"
        android:text="@string/lblBad" />

    <Button
        android:id="@+id/btnFinished"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/colorYellow"
        android:padding="4dp"
        android:text="@string/lblFinished"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>